@@ -931,6 +931,73 @@ p.TableNote
   font-family:Arial, "Frutiger 55 Roman";
 }
 
+/* Bootstrap Alert Components */
+p.Success, li.Success, div.Success
+  {mso-style-name:"Success";
+  margin-top:6.0pt;
+  margin-right:18.0pt;
+  margin-bottom:6.0pt;
+  margin-left:18.0pt;
+  text-align:left;
+  line-height:13.0pt;
+  mso-pagination:widow-orphan;
+  background:#DFF0D8;
+  border: #D0E9C6;
+  mso-border-alt:solid #D0E9C6 .5pt;
+  mso-ansi-language:<?replace insert-language?>;
+  font-size:11.0pt;
+  font-family:Arial;}
+
+p.Warning, li.Warning, div.Warning
+  {mso-style-name:"Warning";
+  margin-top:6.0pt;
+  margin-right:18.0pt;
+  margin-bottom:6.0pt;
+  margin-left:18.0pt;
+  text-align:left;
+  line-height:13.0pt;
+  mso-pagination:widow-orphan;
+  background:#FCF8E2;
+  border:#FBEED5;
+  mso-border-alt:solid #FBEED5 .5pt;
+  mso-ansi-language:<?replace insert-language?>;
+  font-size:11.0pt;
+  font-family:Arial;}
+
+p.Info, li.Info, div.Info
+  {mso-style-name:"Info";
+  margin-top:6.0pt;
+  margin-right:18.0pt;
+  margin-bottom:6.0pt;
+  margin-left:18.0pt;
+  text-align:left;
+  line-height:13.0pt;
+  mso-pagination:widow-orphan;
+  background: #D9EDF7;
+  border:#BCE8F1;
+  mso-border-alt:solid #BCE8F1 .5pt;
+  mso-ansi-language:<?replace insert-language?>;
+  font-size:11.0pt;
+  font-family:Arial;}
+
+p.Danger, li.Danger, div.Danger
+  {mso-style-name:"Danger";
+  margin-top:6.0pt;
+  margin-right:18.0pt;
+  margin-bottom:6.0pt;
+  margin-left:18.0pt;
+  text-align:left;
+  line-height:13.0pt;
+  mso-pagination:widow-orphan;
+  color:#B94A48;
+  background:#F2DEDE;
+  border:#EED3D7;
+  mso-border-alt:solid #EED3D7 .5pt;
+  mso-ansi-language:<?replace insert-language?>;
+  font-size:11.0pt;
+  font-family:Arial;}
+
+
 </style>
     <style xmlns="">
 /* List definitions: do not edit by hand */
